--- a/4-Implementacion/src/main/webapp/app/home/home.component.html
+++ b/4-Implementacion/src/main/webapp/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-9">
+    <div class="col">
         <div [ngSwitch]="isAuthenticated()">
             <div *ngSwitchCase="true">
                 <jhi-muro></jhi-muro>
@@ -14,4 +14,3 @@
         </div>
     </div>
 </div>
-
