--- a/4-Implementacion/src/main/webapp/app/entities/muro/muro.component.html
+++ b/4-Implementacion/src/main/webapp/app/entities/muro/muro.component.html
@@ -70,13 +70,14 @@
     </div>
 </div> -->
 
-<div class="row">
+<div class="row" *ngIf="muro">
     <div class="col-md-2">
         <div><img class="img-thumbnail" src="../../../content/images/Profile_placeholder.png"></div>
-        <div>{{currentAccount.login}}</div>
-        <div><button>Ver Albums</button></div>
+        <h4 class="text-center">{{currentAccount.login}}</h4>
+        <hr />
+        <button type="button" class="btn btn-dark">Ver Amigos</button>
     </div>
     <div class="col-md-10">
-        <jhi-mensaje></jhi-mensaje>
+        <jhi-mensaje [muro]="muro"></jhi-mensaje>
     </div>
 </div>
