--- a/4-Implementacion/src/main/webapp/app/entities/mensaje/mensaje.component.html
+++ b/4-Implementacion/src/main/webapp/app/entities/mensaje/mensaje.component.html
@@ -2,7 +2,7 @@
     <div *ngFor="let mensaje of mensajesMuro">
         <div class="card">
             <div class="card-header">
-                {{mensaje.muro.usuario.login}}
+                {{mensaje.usuario.login}}
             </div>
             <div class="card-body">
                 <p class="card-text">{{mensaje.texto}}</p>
