--- a/4-Implementacion/src/main/webapp/app/entities/mensaje/mensaje.component.html
+++ b/4-Implementacion/src/main/webapp/app/entities/mensaje/mensaje.component.html
@@ -2,7 +2,12 @@
     <div *ngFor="let mensaje of mensajesMuro">
         <div class="card">
             <div class="card-header">
-                {{mensaje.usuario.login}}
+                <div class="d-inline text-left">
+                    {{mensaje.usuario.login}}
+                </div>
+                <div class="d-inline text-right">
+                    {{mensaje.fecha | date:'d/M/yy h:mm a'}}
+                </div>
             </div>
             <div class="card-body">
                 <p class="card-text">{{mensaje.texto}}</p>
@@ -10,7 +15,7 @@
         </div>
     </div>
     <hr />
-    <div class="input-group">
+    <div class="input-group" (keydown.enter)="newMsj()">
         <textarea class="form-control" aria-label="With textarea" [(ngModel)]="currentTxt"></textarea>
         <div class="input-group-prepend">
             <button type="button" class="btn btn-dark" (click)="newMsj()" [disabled]="isSaving || !canSendMsj()">Enviar</button>
